--- a/templates/tests.html
+++ b/templates/tests.html
@@ -3,7 +3,7 @@
     <head></head>
 
     <body>
-        <h1>This is a Header</h1>
+        <h1>This is a Test</h1>
         <p>This is a paragrah</p>
     </body>
 </html>
